RESOLVED FIXED238685
[GStreamer] gst_video_format_info_component not defined in GStreamer <1.18
https://bugs.webkit.org/show_bug.cgi?id=238685
Summary [GStreamer] gst_video_format_info_component not defined in GStreamer <1.18
Diego Pino
Reported 2022-04-01 16:18:10 PDT
[GStreamer] gst_video_format_info_component not defined in GStreamer <1.18
Attachments
Patch (3.88 KB, patch)
2022-04-01 16:19 PDT, Diego Pino
no flags
Patch (2.98 KB, patch)
2022-04-04 08:50 PDT, Diego Pino
no flags
Patch (2.94 KB, patch)
2022-04-05 00:26 PDT, Diego Pino
no flags
Diego Pino
Comment 1 2022-04-01 16:19:21 PDT
Philippe Normand
Comment 2 2022-04-02 00:35:09 PDT
Comment on attachment 456416 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=456416&action=review > Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:-33 > +#if USE(GSTREAMER) > +#include "GStreamerCommon.h" > +#endif > + > #if ENABLE(VIDEO) && USE(GSTREAMER) > > #include "GraphicsContext.h" > #include "GStreamerAudioMixer.h" > -#include "GStreamerCommon.h" Why is this change needed?
Xabier Rodríguez Calvar
Comment 3 2022-04-04 01:26:43 PDT
Comment on attachment 456416 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=456416&action=review > Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:93 > + /* Reverse mapping of info->plane */ . at the end as per coding style. >> Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:-33 >> -#include "GStreamerCommon.h" > > Why is this change needed? Please, do not remove this.
Diego Pino
Comment 4 2022-04-04 08:50:16 PDT
Philippe Normand
Comment 5 2022-04-04 09:14:37 PDT
Comment on attachment 456574 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=456574&action=review > Source/WebCore/ChangeLog:8 > + No new tests (OOPS!). You can remove this and then we're good to go!
Diego Pino
Comment 6 2022-04-05 00:26:40 PDT
Diego Pino
Comment 7 2022-04-05 00:30:59 PDT
(In reply to Philippe Normand from comment #2) > Comment on attachment 456416 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=456416&action=review > > > Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:-33 > > +#if USE(GSTREAMER) > > +#include "GStreamerCommon.h" > > +#endif > > + > > #if ENABLE(VIDEO) && USE(GSTREAMER) > > > > #include "GraphicsContext.h" > > #include "GStreamerAudioMixer.h" > > -#include "GStreamerCommon.h" > > Why is this change needed? The reason why I initially introduced this change was because at some point I got a link problem. The linker could not resolve the symbol `webkitGstVideoFormatInfoComponent`. I implemented this change and got the link error solved. However, after the feedback, I undid the change and build from scratch WebKitGTK/WPE and got no link error, so it seemed this change was not needed.
EWS
Comment 8 2022-04-05 02:12:50 PDT
Committed r292387 (249252@main): <https://commits.webkit.org/249252@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456679 [details].
Radar WebKit Bug Importer
Comment 9 2022-04-05 02:13:17 PDT
Note You need to log in before you can comment on or make changes to this bug.