[GStreamer] gst_video_format_info_component not defined in GStreamer <1.18 https://bugs.webkit.org/show_bug.cgi?id=238685

Reviewed by Philippe Normand.

* platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::webkitGstVideoFormatInfoComponent):
* platform/graphics/gstreamer/GStreamerCommon.h:

Canonical link: https://commits.webkit.org/249252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292387 268f45cc-cd09-0410-ab3c-d52691b4dbfc